--- a/build.common.gradle
+++ b/build.common.gradle
@@ -17,7 +17,7 @@
 
 import java.util.regex.Pattern
 
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
 
@@ -38,8 +38,8 @@ android {
 
     defaultConfig {
         signingConfig signingConfigs.debug
-        applicationId 'com.qualcomm.ftcrobotcontroller'
-        minSdkVersion 23
+//        applicationId 'com.qualcomm.ftcrobotcontroller'
+        minSdkVersion 24
         targetSdkVersion 28
 
         /**
@@ -92,8 +92,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     sourceSets.main {
