--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,4 @@ jobs:
       - run:
           command: chmod +x gradlew
       - run:
-          command: ./gradlew :TeamCode:build --no-daemon
+          command: ./gradlew :TeamRobot:build --no-daemon
